--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "rimraf": "^5.0.10",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
   },
   "files": [
     "dist",
