--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --transport=http",
     "dev": "node --loader ts-node/esm src/index.ts",
+    "sse": "node dist/index.js --transport=sse",
+    "http": "node dist/index.js --transport=http",
+    "stdio": "node dist/index.js --transport=stdio",
+    "inspect": "npx @modelcontextprotocol/inspector node dist/index.js  --transport=http",
+    "inspect-sse": "npx @modelcontextprotocol/inspector node dist/index.js --transport=sse",
+    "inspect-stdio": "npx @modelcontextprotocol/inspector node dist/index.js --transport=stdio",
     "test": "jest",
     "prepublishOnly": "npm run build",
     "lint": "eslint 'src/**/*.ts'",
